force-app/main/default/objects/Credit__c/fields/Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Amount_Remaining__c</fullName>
    <formula>IF(Is_Expired__c,0,Amount__c -  Amount_Used_R__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>