force-app/main/default/objects/Credit__c/fields/Amount_Used__c.field-meta.xml
<CustomField>
    <fullName>Amount_Used__c</fullName>
    <label>Amount Used(Depcricated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>