force-app/main/default/objects/Credit__c/fields/Amount_Used_R__c.field-meta.xml
<CustomField>
    <fullName>Amount_Used_R__c</fullName>
    <label>Amount Used</label>
    <summarizedField>Credit_Payment_Intersect__c.Amount__c</summarizedField>
    <summaryForeignKey>Credit_Payment_Intersect__c.Credit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>