force-app/main/default/objects/Credit__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credits</relationshipLabel>
    <relationshipName>Credits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>