force-app/main/default/objects/Credit__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>