force-app/main/default/objects/Credit__c/validationRules/Amount_used_cant_be_greater_than_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_used_cant_be_greater_than_amount</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c  &lt; Amount_Used__c</errorConditionFormula>
    <errorDisplayField>Amount_Used__c</errorDisplayField>
    <errorMessage>Amount used can not be greater that Amount</errorMessage>
</ValidationRule>