force-app/main/default/objects/Credit__c/validationRules/Cannot_change_Amount_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Amount_field</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Amount__c )</errorConditionFormula>
    <errorMessage>Credit Amount cannot be updated. It can be inactivated or expired. If you require further assistance, please submit a case.</errorMessage>
</ValidationRule>