force-app/main/default/objects/Credit__c/validationRules/Negative_credit_Not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_credit_Not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount can not negative</errorMessage>
</ValidationRule>